--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,7 @@ pycosat==0.6.3
 pycurl==7.43.0.6
 pyee==8.2.2
 pyine==1.1.2
-pyodbc===4.0.0-unsupported
+pyodbc===4.0.1
 pyppeteer==1.0.2
 pyquery==1.4.3
 pyreadline==2.1
